import clientftp.gui.ConnectionGui;

public class Main {
    public static void main(String[] args) {
       new ConnectionGui();
    }
}
